--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">EL TERCER OJO</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <a class="navbar-brand" href="#"><img src="./Images/Blanco con Negro Ícono de Ojo Música Logo.png" alt="" > EL TERCER OJO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,60 +69,68 @@
               <!--COMIENZA LA SEGUNDA PARTE-->
               <section id="Quienes" class="timeline-section">
                 <div class="timeline-items">
+                  <h1 class="color">¿Quiénes somos?</h1>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2015</div>
+                        <div class="timeline-date"><img src="./Images/Pluma60.png" alt=""> </div>
                         <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Diseño Gráfico</h3>
+                            <p>Diseño de marca
+                              Papelería institucional
+                              Gráfica para eventos
+                              Presentaciones
+                              Posteos para redes sociales
+                              Comunicación interna. </p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2016</div>
+                        <div class="timeline-date"><img src="./Images/diseñoweb.png" alt=""> </div>
                         <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Diseño Web</h3>
+                            <p>Sitios web
+                              Landing y one pages
+                              Mailings
+                              Banners. </p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2017</div>
+                        <div class="timeline-date"><img src="./Images/web (2).png" alt=""> </div>
                         <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Desarrollo</h3>
+                            <p>Maquetación responsive
+                              Sitios institucionales
+                              Sitios autoadministrables
+                              Tiendas online
+                              Intranets
+                              Apps. </p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2018</div>
+                        <div class="timeline-date"><img src="./Images/Contenidos.png" alt=""> </div>
                         <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Contenidos</h3>
+                            <p>Redacción integral
+                              Estrategias de comunicación
+                              Redes sociales
+                              UX writing
+                              Fotografía
+                              Videos. </p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
-                        <div class="timeline-date">2019</div>
+                        <div class="timeline-date"><img src="./Images/Megafono.png" alt=""> </div>
                         <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2020</div>
-                        <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2021</div>
-                        <div class="timeline-content">
-                            <h3>timeline item title</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h3>Marketing digital</h3>
+                            <p>Campañas online
+                              Community management
+                              E-mail marketing
+                              Inbound marketing
+                              Marketing de contenidos
+                              Posicionamiento SEO. </p>
                         </div>
                     </div>
                 </div>
